--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Mackenzie Henderson</h1>
+								<p>I'm just a guy who does stuff, take a look below to see what. <br>
+								to be filled. </p>
 							</div>
 						</div>
 						<nav>
